// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LazyImage Snapshot Tests should match snapshot - invalid URL with regular Image 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": "100%",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      {
        "uri": "invalid-url",
      }
    }
    style={
      [
        {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`LazyImage Snapshot Tests should match snapshot - loaded state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": "100%",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      {
        "uri": "https://example.com/image.jpg",
      }
    }
    style={
      [
        {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="fast-image"
  />
</View>
`;

exports[`LazyImage Snapshot Tests should match snapshot - loading state with valid URL 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": "100%",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      {
        "uri": "https://example.com/image.jpg",
      }
    }
    style={
      [
        {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="fast-image"
  />
  <ActivityIndicator
    color="rgba(55, 107, 251, 1)"
    size="small"
    style={
      {
        "backgroundColor": "rgba(240, 242, 245, 1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="loading_activity_indicator"
  />
</View>
`;

exports[`LazyImage Snapshot Tests should match snapshot - with custom styles 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": "100%",
      "opacity": 1,
      "padding": 10,
      "width": "100%",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      {
        "uri": "https://example.com/image.jpg",
      }
    }
    style={
      [
        {
          "height": "100%",
          "width": "100%",
        },
        {
          "borderRadius": 8,
        },
      ]
    }
    testID="fast-image"
  />
  <ActivityIndicator
    color="rgba(55, 107, 251, 1)"
    size="large"
    style={
      {
        "backgroundColor": "rgba(240, 242, 245, 1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="loading_activity_indicator"
  />
</View>
`;
